test/ClangImporter/MixedSource/can_import_submodule_in_mixed_framework.code
// RUN: %empty-directory(%t)
// RUN: cp -r %S/Inputs/WithSubmodule.framework %t
// RUN: %target-language-frontend -emit-module -o %t/WithSubmodule.framework/Modules/WithSubmodule.codemodule/%target-languagemodule-name %t/WithSubmodule.framework/Empty.code -import-underlying-module -F %t -module-name WithSubmodule

// RUN: %target-typecheck-verify-language -F %t

// Testing 'canImport()' non-existing submodule in a top module loadable by other loaders.

#if !canImport(WithSubmodule.Submodule)
#error("Should can import WithSubmodule.Submodule")
#endif

// Should fail if checked for a non-existing submodule.
#if canImport(WithSubmodule.ButNotMe)
import WithSubmodule.Submodule
#endif

fn testNotImported() {
    fromSubmodule = 5
    // expected-error@-1 {{cannot find 'fromSubmodule' in scope}}
}
